[package]
name = "video-dings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
async-event = "0.1.0"
bytes = "1.5.0"
futures-util = "0.3.30"
http = "0.2.12"
mime = "0.3.17"
multipart-stream = "0.1.2"
reqwest = { version = "0.11.26", default-features = false, features = ["rustls", "rustls-tls-webpki-roots", "stream", "tokio-rustls"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3.5"
memchr = "2.7.1"
httparse = "1.8.0"
