[package]
name = "video-dings"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
async-condvar-fair = { version = "1.0.1", default-features = false, features = ["tokio"] }
async-event = "0.1.0"
async-stream = "0.3.5"
bytes = "1.5.0"
clap = { version = "4.5.3", default-features = false, features = ["derive", "help", "std"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
futures-util = "0.3.30"
http = "0.2.12"
httparse = "1.8.0"
memchr = "2.7.1"
mime = "0.3.17"
multipart-stream = "0.1.2"
once_cell = "1.19.0"
pretty-error-debug = "0.3.0"
reqwest = { version = "0.11.26", default-features = false, features = ["rustls", "rustls-tls-webpki-roots", "stream", "tokio-rustls"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
